# Domo_AI_agent

./: .gitignore  CHANGELOG.md  README.md  config.yaml  domo_config.yaml  pyproject.toml  requirements.txt  run_app.sh
app/: streamlit_app.py
assistant/: audit.py  capabilities.py  config.py  controller.py  domo_agent.py  llm_tasks.py  planner.py  policy.py  registry.py  router.py  runtime.py  schemas.py
integrations/: ollama_client.py
tests/: test_agent_core.py  test_atomic_tools.py  test_config.py  test_conversation_runtime.py  test_document_actions.py  test_generate_application_materials.py  test_job_folder_resolution.py  test_job_search_overrides.py  test_llm_tasks.py  test_match_cv.py  test_planner_validation.py  test_text_normalization.py  test_workflow_registry.py
tools/: atomic_tools.py  document_actions.py  web_search.py
tools/job/: __init__.py  clean_job_description.py  create_job_files.py  discover_jobs.py  export_job_pdf.py  filesystem.py  generate_application_materials.py  inputs.yaml  job_folder_resolution.py  local_job_inputs.py  main.py  match_cv.py  models.py  pdf_utils.py  prompts.py  run_job_agent.py  text_normalization.py
workflows/: __init__.py  create_job_files_workflow.py  document_workflows.py  match_cv_workflow.py  run_job_agent_workflow.py  web_search_workflow.py
